--- a/app/views/reports/hours.html.erb
+++ b/app/views/reports/hours.html.erb
@@ -46,7 +46,7 @@
         </tr>
       <% end %>
       <tr><td></td></tr>
-      <tr><td><%= submit_tag "Apply Filter" %></td> </tr>
+      <tr><td></td><td><%= submit_tag "Apply Filter" %></td> </tr>
     </table>
 
   </div>
