--- a/app/views/reports/hours.html.erb
+++ b/app/views/reports/hours.html.erb
@@ -4,53 +4,11 @@
 <p class="error"><%= flash[:error] %></p>
 <p class="notice"><%= flash[:notice] %></p>
 
-<% form_tag :action => 'hours', :method => 'get' do %>
-  <div style="width:60%">
+<div id="hours_filter">
+  <%= render :partial => 'hours_form', :locals => { :params => params, :tag_type => @tag_type, :years => @years, :months => @months } -%>
+</div>
 
-    <table style="float:right">
-      <tr>
-        <td><%= label_tag "Group by" %></td>
-        <td><%= select_tag "grouping", empty_option("No grouping") + options_for_select(['Consultant','Activity','Date'], params[:grouping]) %></td>
-      </tr>
-      <tr>
-        <td><%= label_tag "New page" %></td>
-        <td><%= check_box_tag "page_break", 1, params[:page_break] %></td>
-      </tr>
-    </table>
 
-    <table>
-      <tr>
-        <td><%= label_tag "Year" %></td>
-        <td><%= select_tag "year", options_for_select(@years, @selected_year), {:include_blank => 'None'} %></td>
-      </tr>
-      <tr>
-        <td><%= label_tag "month" %></td>
-        <td><%= select_tag "month", options_from_collection_for_select( @months, 'first', 'last', @selected_month  ) %></td>
-      </tr>
-      <tr>
-        <td><%= label_tag "Billed" %></td>
-        <td><%= select_tag "billed", options_for_select(boolean_options, params[:billed]) %></td>
-      </tr>
-      <tr>
-        <td><%= label_tag "User" %></td>
-        <td><%= select_tag "user", empty_option("All") + options_from_collection_for_select( User.all, :id, :fullname, params[:user].to_i ) %></td>
-      </tr>
-      <tr>
-        <td><%= label_tag "Tag Category"%></td>
-        <td><%= select_tag "tag_type_id", empty_option("All") + options_from_collection_for_select(TagType.all, :id, :name, params[:tag_type_id].to_i) %></td>
-      </tr>
-      <% if @tag_type %>
-        <tr>
-          <td><%= label_tag 'Tag'%></td>
-          <td><%= select_tag "tag_id", empty_option("All") + options_from_collection_for_select(@tag_type.tags, :id, :name, params[:tag_id].to_i) %></td>
-        </tr>
-      <% end %>
-      <tr><td></td></tr>
-      <tr><td></td><td><%= submit_tag "Apply Filter" %></td> </tr>
-    </table>
-
-  </div>
-<% end -%>
 
 <hr/>
 
