--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -9,7 +9,7 @@ table {
         text-align: left;
 }
 
-.activities_header {
+.activity_header {
 background:#EEEEFF none repeat scroll 0 0;
 padding-top:5px;
 }
