made parts of the code XHTML 1.0 Strict compliant

--- a/app/views/activities/_form.html.erb
+++ b/app/views/activities/_form.html.erb
@@ -2,24 +2,24 @@
 <% form_tag activities_path, :method => :get, :id => 'filter_form' do %>
 <table>
     <tr>
-      <td><%= label_tag "Default" %></td>
+      <td><%= label_tag "default" %></td>
       <td><%= select_tag "default", options_for_select(boolean_options, params[:default]) %></td>
     </tr>
     <tr>
-      <td><%= label_tag "Active" %></td>
+      <td><%= label_tag "active" %></td>
       <td><%= select_tag "active", options_for_select(boolean_options, params[:active]) %></td>
     </tr>
     <tr>
-      <td><%= label_tag "Category"%></td>
+      <td><%= label_tag "tag_type_id","Category"%></td>
       <td><%= select_tag "tag_type_id", empty_option("All") + options_from_collection_for_select(TagType.all, :id, :name, params[:tag_type_id].to_i) %></td>
     </tr>
 
     <tr>
 <% if tags.empty?%>
-      <td><%= label_tag "Tag", nil, :class => 'disabled' %></td>
+      <td><%= label_tag "tag_id","Tag", :class => 'disabled' %></td>
       <td><%= select_tag "tag_id", empty_option("-----------"), {:disabled => true} %></td>
 <% else %>
-      <td><%= label_tag "Tag"%></td>
+      <td><%= label_tag "tag_id","Tag"%></td>
       <td><%= select_tag "tag_id", empty_option("All") + options_from_collection_for_select(tags, :id, :name, params[:tag_id].to_i ) %></td>
 <% end %>
     </tr>
