--- a/app/views/month/week.html.erb
+++ b/app/views/month/week.html.erb
@@ -7,7 +7,7 @@
 <% form_tag 'week', :method => 'get', :id => 'week_form' do %>
   <%= render :partial => 'reports/date_picker', :locals =>
     { :years => @years, :months => @months, :selected_year => @selected_year, :selected_month => @selected_month } -%>
-  <noscript><%= submit_tag 'View' %></noscript>
+  <noscript><div><%= submit_tag 'View' %></div></noscript>
 <% end %>
 
 <%= observe_form 'week_form',
