--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,12 @@
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 	<head>
 		<title>TimeFlux - the open and easy way of time management and billing</title>
 		<%= stylesheet_link_tag "application" %>
 		<%= javascript_include_tag :defaults %>
         <%= stylesheet_link_tag "pagination" %>
+        <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 	</head>
 	<body>
 		<div id="container">
