--- a/app/views/month/_week_content.erb
+++ b/app/views/month/_week_content.erb
@@ -6,9 +6,9 @@
     <tr><th></th>
       <% day.beginning_of_week.upto last_in_month.end_of_week  do |d| %>
         <% if d.wday == 1 %>
-        </tr><tr><th><%=d.cweek.to_s%></ht>
+        </tr><tr><th><%=d.cweek.to_s%></th>
           <% end %>
-        <td <%= 'class ="grayed"' if d.month != day.month%> ><%= user.hours_on_day d -%></td>
+        <td <%= 'class="grayed"' if d.month != day.month%> ><%= user.hours_on_day d -%></td>
 <% end %>
       </tr>
     </table>
