summary and user report + fixes for counterposts

--- a/app/views/month/week.html.erb
+++ b/app/views/month/week.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Review Month</h1>
 
-<%= render :partial => 'select_view' -%>
+<%= render :partial => 'sub_menu' -%>
 
 <% form_tag 'week', :method => 'get', :id => 'week_form' do %>
   <%= render :partial => 'reports/date_picker', :locals =>
