--- a/app/views/tag_types/edit.html.erb
+++ b/app/views/tag_types/edit.html.erb
@@ -19,11 +19,19 @@
     </select>
   </p>
 
+    <p>TODO:
+      <%= check_box_tag :mutually_exclusive %>
+      <%= label_tag :mutually_exclusive %>
+    </p>
+
   <p>
     <%= f.submit "Update" %>
   </p>
 <% end %>
 
+
+
+  <br/><br/><hr/>
 
   Alternative (add ajax?) icon select
   <table><tr>
