--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
                     <span class="menu_item"><%= link_to "Time Entry", time_entries_url, :class => "menu_link" %></span>
 					<span class="menu_item"><%= link_to "Review Month", month_url, :class => "menu_link" %></span>
 					<% if @current_user.admin -%>
-						<span class="menu_item"><%= link_to "Hours Report", reports_url, :class => "menu_link" %></span>
+						<span class="menu_item"><%= link_to "Reports", reports_url, :class => "menu_link" %></span>
 						<span class="menu_item"><%= link_to "Activities", activities_url, :class => "menu_link" %></span>
 						<span class="menu_item"><%= link_to "Users", users_url, :class => "menu_link" %></span> 
 					<% end -%>
