--- a/app/views/month/listing.html.erb
+++ b/app/views/month/listing.html.erb
@@ -1,7 +1,7 @@
 
 <h1>Review Month</h1>
 
-<%= render :partial => 'select_view' -%>
+<%= render :partial => 'sub_menu' -%>
 
 <% form_tag 'listing', :method => 'get', :id => 'listing_form' do %>
   <%= render :partial => 'reports/date_picker', :locals =>
