--- a/app/views/reports/user.html.erb
+++ b/app/views/reports/user.html.erb
@@ -1,3 +1,4 @@
+<%= render :partial => 'sub_menu' -%>
 
 <h2><%= @title %></h2>
 
@@ -18,6 +19,6 @@
 
 <%= @table.to_html() -%>
 
-<%= render :partial => 'download', :locals => { :params => params } -%>
+<%= render :partial => 'download', :locals => { :params => params, :action => 'user' } -%>
 
 
