--- a/app/views/tag_types/edit.html.erb
+++ b/app/views/tag_types/edit.html.erb
@@ -2,43 +2,65 @@
 <p class="notice"><%= flash[:notice] %></p>
 <p class="error"><%= flash[:error] %></p>
 
-<% form_for @tag_type do |f| %>
-  <%= f.error_messages %>
-  <p>
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </p>
-  <p>
-    Icon (looks great in Firefox)<br />
-    <select>
-      <% @icons.each do |icon| %>
-        <optgroup style="background-image: url(/images/led-icons/<%= icon%>.png); background-repeat:no-repeat; height:18px;">
-          <option value="<%=icon%>"><%=icon%></option>
-        </optgroup>
-      <% end %>
-    </select>
-  </p>
+<br/>
+<div style="width:80%">
 
-    <p>TODO:
-      <%= check_box_tag :mutually_exclusive %>
+  <div style="float:right">
+    
+    Icon: <span id="icon"><%= render :partial => 'icon', :locals => { :icon => @icon } -%></span><br/><br/>
+    
+    <% form_remote_tag(:url => {:action => 'update_icon'}, :update => 'icon',
+      :html => { :name => 'icon_form' } ) do %>
+      <%= hidden_field_tag 'icon' %>
+
+      <table style="border:1px solid #BBBBBB;"><tr>
+          <% @icons.each_with_index do |icon, index| %>
+            <%= if index % 10 == 0 then "</tr><tr>" else "" end %>
+            <td>
+              <%= hidden_field_tag 'id', @tag_type.id %>
+              <%= image_submit_tag "/images/led-icons/#{icon}.png", :name => icon,
+                :onClick => "document.icon_form.icon.value='#{icon}';document.tag_type_form.icon.value='#{icon}'" %>
+            </td>
+          <% end %>
+        </tr></table>
+    <% end %>
+  </div>
+
+  <% form_for @tag_type, :html => { :name => 'tag_type_form' } do |f| %>
+    <%= f.error_messages %>
+    <p>
+      <%= f.label :name %>
+      <%= f.text_field :name %>
+    </p>
+
+    <p>
+      <%= check_box_tag :mutually_exclusive, :disabled => true %>
       <%= label_tag :mutually_exclusive %>
     </p>
 
-  <p>
-    <%= f.submit "Update" %>
-  </p>
-<% end %>
+    <p style="clear:both">
+      <%= hidden_field_tag 'icon', @icon %>
+      <%= f.submit "Update" %>
+    </p>
+  <% end %>
+</div>
+
+<br/><br/>
 
 
 
-  <br/><br/><hr/>
+<br/><br/><hr/>
 
-  Alternative (add ajax?) icon select
-  <table><tr>
-  <% @icons.each_with_index do |icon, index| %>
-    <%= if index % 10 == 0 then "</tr><tr>" else "" end %>
-    <td><% form_tag do %>
-      <%= image_submit_tag "/images/led-icons/#{icon}.png" %>
+Alternative Firefox only icon select
+
+<p>
+  Icon<br />
+  <select>
+    <% @icons.each do |icon| %>
+      <optgroup style="background-image: url(/images/led-icons/<%= icon%>.png); background-repeat:no-repeat; height:18px;">
+        <option value="<%=icon%>"><%=icon%></option>
+      </optgroup>
     <% end %>
-  <% end %></td>
-  </tr></table>
+  </select>
+</p>
+
