added temporary view for public tags (typically vacation)

--- a/app/views/month/_sub_menu.erb
+++ b/app/views/month/_sub_menu.erb
@@ -2,5 +2,6 @@
 <%=  link_to "Week view", :action => 'week' %> |
 <%#=  link_to "Month view", :action => 'month' %> 
 <%#=  link_to "Summary", :action => 'summary' %> 
-<%=  link_to "Listing", :action => 'listing' %>
+<%=  link_to "Listing", :action => 'listing' %> |
+<%=  link_to "Public entries", :action => 'shared' %>
 </p>
