--- a/app/views/tags/edit.html.erb
+++ b/app/views/tags/edit.html.erb
@@ -7,16 +7,17 @@
     <%= f.text_field :name %>
   </p>
 
-  <p>TODO: Public
-  <input id="activity_default_activity" type="checkbox" value="1" name="activity[default_activity]" checked="checked"/>
-  </p>
    <p>
     <%= f.label :tag_type %><br />
     <%= collection_select(:tag, :tag_type_id, @tag_types, :id, :name) %>
   </p>
 
+    <p>
+  <input id="activity_default_activity" type="checkbox" value="1" name="activity[default_activity]" checked="checked"/>
+  Public</p>
+
   <p>
-  	<%= f.submit "Update" %>
+    <%= f.submit "Update" %>
   </p>
 
 <% end %>
