stores the new attributes in the model

--- a/app/views/month/_sub_menu.erb
+++ b/app/views/month/_sub_menu.erb
@@ -3,5 +3,5 @@
 <%#=  link_to "Month view", :action => 'month' %> 
 <%#=  link_to "Summary", :action => 'summary' %> 
 <%=  link_to "Listing", :action => 'listing' %> |
-<%=  link_to "Public entries", :action => 'shared' %>
+<%=  link_to "Shared entries", :action => 'shared' %>
 </p>
