--- a/app/views/tag_types/edit.html.erb
+++ b/app/views/tag_types/edit.html.erb
@@ -7,7 +7,7 @@
 
   <div style="float:right">
     
-    Icon: <span id="icon"><%= render :partial => 'icon', :locals => { :icon => @icon } -%></span><br/><br/>
+    Icon: <span id="icon"><%= render :partial => 'icon', :locals => { :icon => @tag_type.icon } -%></span><br/><br/>
     
     <% form_remote_tag(:url => {:action => 'update_icon'}, :update => 'icon',
       :html => { :name => 'icon_form' } ) do %>
@@ -34,12 +34,12 @@
     </p>
 
     <p>
-      <%= check_box_tag :mutually_exclusive, :disabled => true %>
-      <%= label_tag :mutually_exclusive %>
+      <%= f.check_box :mutually_exclusive %>
+      <%= f.label :mutually_exclusive %>
     </p>
 
     <p style="clear:both">
-      <%= hidden_field_tag 'icon', @icon %>
+      <%= hidden_field_tag 'icon', @tag_type.icon %>
       <%= f.submit "Update" %>
     </p>
   <% end %>
