--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -1,26 +1,26 @@
 <h1><%= @activity.name %></h1>
 
 <p>
-  <b>Description</b><br />
   <%= @activity.description %>
 </p>
 
 <p>
-  <b>active</b><br />
+  <b>Active:</b>
   <%= @activity.active %>
 </p>
 
 <p>
-  <b>Default</b><br />
+  <b>Default:</b>
   <%= @activity.default_activity %>
 </p>
 
 <p>
-  <b>Tags</b><br />
-  <%= @activity.tags.join(", ") %>
+   <b>Tags:</b> <% @activity.tags.each do |tag| %>
+      <%= image_tag "led-icons/#{tag.tag_type.icon}.png", :title => tag.tag_type.name -%><%= tag.name -%>,
+    <% end %>
 </p>
 
 <p>
-  <b>Assignments</b><br />
-  <%= @activity.users.join(", ") %>
+  <b>Assignments:</b>
+  <%= @activity.users.collect(&:fullname).join(", ") %>
 </p>
