--- a/app/views/activities/edit.html.erb
+++ b/app/views/activities/edit.html.erb
@@ -20,6 +20,11 @@
 		<%= f.check_box :default_activity %> 
 		<%= f.label :default_activity %>
 	</p>
+
+    <p>
+    <%= f.check_box :shared %>
+    <%= f.label :shared, "Shared" %><br />
+  </p>
     <p> 
 		<%= f.label :tags %><br/>
         <%= f.collection_select(:tag_ids, Tag.all, :id, :name_and_type, {}, {:multiple => true, :size => 10, :class => "activity_multiselect"})%>
