--- a/app/views/time_entries/index.html.erb
+++ b/app/views/time_entries/index.html.erb
@@ -1,3 +1,5 @@
+<% beginning_of_week = @date.beginning_of_week %>
+
 <h1>Entries for week <%= @date.cweek %></h1>
 <p class="notice"><%= flash[:notice] %></p>
 <p class="error"><%= flash[:error] %></p>
@@ -18,6 +20,14 @@
 		<th class="week_entries_hours">Sat</th>
 		<th class="week_entries_hours">Sun</th>
 	</tr>
+
+        <tr class="grayed"><td>Expected hours</td>
+            <% (beginning_of_week .. beginning_of_week + 6).each do |date| %>
+          <% expected = Holiday.expected_hours_for date %>
+            <th style="text-align:center;"><%= if expected > 0 then expected else '-' end %></th>
+            <% end %>
+        </tr>
+        
 </thead>
 <tbody>
 <% @activities.each do |activity| -%>
