Added holidays to main menu

--- a/app/views/holidays/index.html.erb
+++ b/app/views/holidays/index.html.erb
@@ -1,7 +1,7 @@
 <p class="notice"><%= flash[:notice] %></p>
 <p class="error"><%= flash[:error] %></p>
 
-<h1>Listing holidays</h1>
+<h1>Holidays</h1>
 
 <table>
   <tr>
