--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
 					<% if @current_user.admin -%>
 						<span class="menu_item"><%= link_to "Reports", reports_url, :class => "menu_link" %></span>
 						<span class="menu_item"><%= link_to "Activities", activities_url, :class => "menu_link" %></span>
+                                                <span class="menu_item"><%= link_to "Holidays", holidays_url, :class => "menu_link" %></span>
 						<span class="menu_item"><%= link_to "Users", users_url, :class => "menu_link" %></span> 
 					<% end -%>
 					<span class="menu_item"><%= link_to "Logout", {:controller => "user_sessions", :action => "destroy"}, :method => :delete, :class => "menu_link" %></span>
