added ajax updating of shared listing

--- a/app/views/month/_sub_menu.erb
+++ b/app/views/month/_sub_menu.erb
@@ -1,7 +1,7 @@
 <p>
-<%=  link_to "Week view", :action => 'week' %> |
+<%=  link_to "Calender view", :action => 'week' %> |
 <%#=  link_to "Month view", :action => 'month' %> 
 <%#=  link_to "Summary", :action => 'summary' %> 
-<%=  link_to "Listing", :action => 'listing' %> |
+<%=  link_to "Listing view", :action => 'listing' %> |
 <%=  link_to "Shared entries", :action => 'shared' %>
 </p>
