--- a/app/views/activities/edit.html.erb
+++ b/app/views/activities/edit.html.erb
@@ -2,40 +2,40 @@
  <p class="notice"><%= flash[:notice] %></p>
  <p class="error"><%= flash[:error] %></p>
 
-<% form_for @activity do |f| %>
-	<%= f.error_messages %>
-	<p>
-		<%= f.label :name %><br />
-		<%= f.text_field :name %>
-	</p>
-	<p>
-		<%= f.label :description %><br />
-		<%= f.text_field :description %>
-	</p>
-	<p>
-		<%= f.check_box :active %>
-		<%= f.label :active %>
-	</p>
-	<p>
-		<%= f.check_box :default_activity %> 
-		<%= f.label :default_activity %>
-	</p>
+ <% form_for @activity do |f| %>
+   <%= f.error_messages %>
+   <p>
+     <%= f.label :name %><br />
+     <%= f.text_field :name %>
+   </p>
+   <p>
+     <%= f.label :description %><br />
+     <%= f.text_field :description %>
+   </p>
+   <p>
+     <%= f.check_box :active %>
+     <%= f.label :active %>
+   </p>
+   <p>
+     <%= f.check_box :default_activity %>
+     <%= f.label :default_activity %>
+   </p>
 
-    <p>
-    <%= f.check_box :shared %>
-    <%= f.label :shared, "Shared" %><br />
-  </p>
-    <p> 
-		<%= f.label :tags %><br/>
-        <%= f.collection_select(:tag_ids, Tag.all, :id, :name_and_type, {}, {:multiple => true, :size => 10, :class => "activity_multiselect"})%>
-		<%= hidden_field_tag "activity[tag_ids][]", "" %> <%# Make sure ids are included in the params hash on requests if no elements are selected %>
-    </p>
-	<p> 
-		<%= f.label :assignments %><br/>
-        <%= f.collection_select(:user_ids, User.all, :id, :fullname, {}, {:multiple => true, :size => 10, :class => "activity_multiselect"})%>
-		<%= hidden_field_tag "activity[user_ids][]", "" %> <%# Make sure ids are included in the params hash on requests if no elements are selected %>
-    </p>
-	<p>
-		<%= f.submit "Update" %>
-	</p>
-<% end %>
+   <p>
+     <%= f.check_box :shared %>
+     <%= f.label :shared %><br />
+   </p>
+   <p>
+     <%= f.label :tags %><br/>
+     <%= f.collection_select(:tag_ids, Tag.all, :id, :name_and_type, {}, {:multiple => true, :size => 10, :class => "activity_multiselect"})%>
+     <%= hidden_field_tag "activity[tag_ids][]", "" %> <%# Make sure ids are included in the params hash on requests if no elements are selected %>
+   </p>
+   <p>
+     <%= f.label :assignments %><br/>
+     <%= f.collection_select(:user_ids, User.all, :id, :fullname, {}, {:multiple => true, :size => 10, :class => "activity_multiselect"})%>
+     <%= hidden_field_tag "activity[user_ids][]", "" %> <%# Make sure ids are included in the params hash on requests if no elements are selected %>
+   </p>
+   <p>
+     <%= f.submit "Update" %>
+   </p>
+ <% end %>
