--- a/app/views/month/calender.html.erb
+++ b/app/views/month/calender.html.erb
@@ -5,8 +5,10 @@
 <%= render :partial => 'sub_menu' -%>
 
 <% form_tag 'calender', :method => 'get', :id => 'calender_form' do %>
-  <%= render :partial => 'reports/date_picker', :locals =>
-    { :years => @years, :months => @months, :selected_year => @selected_year, :selected_month => @selected_month } -%>
+  <p>
+    <label for="date">Period</label>
+    <%= date_select "calender", "date", {:start_year => Date.today.year - 5 , :end_year => Date.today.year + 1, :discard_day => true} %>
+  </p>
   <noscript><div><%= submit_tag 'View' %></div></noscript>
 <% end %>
 
