--- a/app/views/time_entries/index.html.erb
+++ b/app/views/time_entries/index.html.erb
@@ -34,8 +34,9 @@
 	<% time_entries = select_by_activity(@time_entries, activity) %>
         <% locked = time_entries.any? {|e| e.locked} %>
 	<tr> 
-		<td class="week_entries_activity">
-			<%= link_to truncate(activity.name, :length => 20), activity_path(activity) %>
+		<td class="week_entries_activity">      
+                  <%= link_to truncate(activity.name, :length => 20), activity_path(activity) %>
+                  <%= locked ? image_tag("lock.png", :title => "Locked") : '' %>
 		</td>
                 <% time_entries.group_by(&:date).each do |date, entries| %>
                   <td class="week_entries_hours"><%= entries.sum(&:hours) %><%= entries.size > 1 ? '*' : '' %>   </td>
@@ -44,7 +45,7 @@
 		<td>
                 <%= link_to image_tag("pencil.png", :title => "Edit"), edit_multiple_time_entries_path(:ids => ids_from(time_entries), :date => @date), :method => :post %>
                 <% if locked %>
-                  <%= image_tag("lock.png", :title => "Locked") %>
+                  <%#= image_tag("lock.png", :title => "Locked") %>
                 <% else %>
                    <%= link_to image_tag("delete.png", :title => "Delete"), destroy_multiple_time_entries_path(:ids => ids_from(time_entries), :date => @date), :method => :post %>
 		<% end %>
