Updated html title

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 	<head>
-		<title>TimeFlux - the open and easy way of time management and billing</title>
+		<title><%= title %></title>
 		<%= stylesheet_link_tag "application" %>
 		<%= javascript_include_tag :defaults %>
         <%= stylesheet_link_tag "pagination" %>
